# slime_mold

./: .gitignore  Bounds2.hpp  CMakeLists.txt  README.md  Soil.cpp  Soil.hpp  SoilComponent.cpp  SoilComponent.hpp  SoilGUI.cpp  SoilGUI.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  base_math.cpp  base_math.hpp  font.cpp  font.hpp  font_env.cpp  font_env.hpp  gui.cpp  gui.hpp  gui.js  image_manip.cpp  image_manip.hpp  imshow.hpp  index.html  install.sh  main.cpp  opengl_imshow.cpp  opengl_imshow.hpp  random.cpp  random.hpp  slime_mold.cpp  slime_mold.data  slime_mold.hpp  slime_mold.js  slime_mold.wasm  slime_mold_component.cpp  slime_mold_component.hpp  slime_mold_wgl.js  (+9 more)
tool/: explore_image_manipulation.m  test_images.mat
